# MLOpsProject

./: .gitignore  README.md  pyproject.toml  requirements.txt
project/configs/: base.yaml
project/data/demo/: train.csv
project/reports/: eda_summary.json  presentation_outline.md
project/scripts/: doctor.py  make_demo_dataset.py  run_all.ps1  run_eda.py  run_experiment.bat  run_experiment.ps1  run_experiment.py  run_experiment.sh
project/src/mlops_project/: data.py  eda.py  labelstudio.py  tracking.py  train.py  utils.py
project/tests/: test_smoke.py
